# ink-championship

./: .gitignore  README.md
common/: Cargo.toml
common/src/: error.rs  lib.rs  structs.rs
complete_contracts/: game.json  simple_player_x.contract  simple_player_y.contract  squink_splash.contract  squink_splash.json
egypt-player/: Cargo.toml  lib.rs
game/: Cargo.toml  README.md  drive-game.sh  lib.rs
game/frontend/lib/useInk/: constants.ts
playground/: README.md
playground/corner-player/: Cargo.toml
playground/my-player/: Cargo.toml
playground/my-player/src/: drink_tests.rs
playground/rand-player/: Cargo.toml
simple-player/: Cargo.toml  lib.rs
simplest-player/: Cargo.toml  lib.rs
smart-faucet/frontend/src/: App.tsx  constants.ts
